--- a/web1/src/app/inventory/fitter/fitter.component.html
+++ b/web1/src/app/inventory/fitter/fitter.component.html
@@ -160,7 +160,7 @@
                             </div>
                         </form>
                         <!-- save fitter end -->
-                        <div class="row">
+                        <div *ngIf="this.id != 0" class="row">
                         <!-- save Lenstype start -->
                             <div class="col-md-6">
                                 <div class="row">
