--- a/web1/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web1/src/app/inventory/purchase-list/purchase-list.component.html
@@ -132,7 +132,7 @@
                           <td>{{data.InvoiceNo}}</td>
                           <td>{{data.ShopName}}<span [style.color]="'blue'"
                               *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
-                          <td>{{data.PurchaseDate}}</td>
+                          <td>{{dateFormat(data.PurchaseDate)}}</td>
                           <td>{{data.PaymentStatus}}</td>
                           <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
                           <td>{{data.Quantity}}</td>
