--- a/web1/src/app/sale/customer-list/customer-list.component.html
+++ b/web1/src/app/sale/customer-list/customer-list.component.html
@@ -113,8 +113,8 @@
                           <td class="text-left">{{data.MobileNo2}} </td>
                           <td class="text-left">{{data.PhoneNo}} </td>
                           <td class="text-left">{{data.Email}} </td>
-                          <td class="text-left">{{data.DOB}}</td>
-                          <td class="text-left">{{data.Anniversary}}</td>
+                          <td class="text-left">{{dateFormat(data.DOB)}}</td>
+                          <td class="text-left">{{dateFormat(data.Anniversary)}}</td>
                           <td class="text-left">{{data.Address}} </td>
                           <td class="text-left">{{data.CreatedPerson}} </td>
                           <td class="text-left">{{data.UpdatedPerson}} </td>
