--- a/web1/src/app/sale/doctor-list/doctor-list.component.html
+++ b/web1/src/app/sale/doctor-list/doctor-list.component.html
@@ -105,8 +105,8 @@
                           <td class="text-left">{{data.LoginName}}</td>
                           <td class="text-left">{{data.Designation}}</td>
                           <td class="text-left">{{data.Address}}</td>
-                          <td class="text-left">{{data.DOB}}</td>
-                          <td class="text-left">{{data.Anniversary}}</td>
+                          <td class="text-left">{{dateFormat(data.DOB)}}</td>
+                          <td class="text-left">{{dateFormat(data.Anniversary)}}</td>
                           <td class="text-left"> {{data.CreatedPerson}} </td>
                           <td class="text-left"> {{data.UpdatedPerson}} </td>
                         </tr>
